--- a/package.json
+++ b/package.json
@@ -1,45 +1,45 @@
 {
-  "name": "glimmr",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc",
-    "start": "node src/index.ts",
-    "dev": "nodemon src/index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.3",
-    "cloudinary": "^2.5.1",
-    "cookie-parser": "^1.4.7",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "joi": "^17.13.3",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.0",
-    "multer": "^1.4.5-lts.1",
-    "node-cache": "^5.1.2",
-    "nodemailer": "^6.9.16",
-    "ts-node": "^10.9.2",
-    "tsc": "^2.0.4",
-    "typescript": "^5.6.3"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/body-parser": "^1.19.5",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/dotenv": "^8.2.3",
-    "@types/express": "^5.0.0",
-    "@types/joi": "^17.2.3",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/mongoose": "^5.11.97",
-    "@types/multer": "^1.4.12",
-    "@types/node": "^22.9.0",
-    "@types/node-cache": "^4.2.5",
-    "@types/nodemailer": "^6.4.16"
-  }
+	"name": "glimmr",
+	"version": "1.0.0",
+	"main": "src/index.ts",
+	"scripts": {
+		"build": "tsc",
+		"start": "node src/index.ts",
+		"dev": "nodemon src/index.ts"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"dependencies": {
+		"bcrypt": "^5.1.1",
+		"body-parser": "^1.20.3",
+		"cloudinary": "^2.5.1",
+		"cookie-parser": "^1.4.7",
+		"dotenv": "^16.4.5",
+		"express": "^4.21.1",
+		"joi": "^17.13.3",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.8.0",
+		"multer": "^1.4.5-lts.1",
+		"node-cache": "^5.1.2",
+		"nodemailer": "^6.9.16",
+		"ts-node": "^10.9.2",
+		"tsc": "^2.0.4",
+		"typescript": "^5.6.3"
+	},
+	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
+		"@types/body-parser": "^1.19.5",
+		"@types/cookie-parser": "^1.4.7",
+		"@types/dotenv": "^8.2.3",
+		"@types/express": "^5.0.0",
+		"@types/joi": "^17.2.3",
+		"@types/jsonwebtoken": "^9.0.7",
+		"@types/mongoose": "^5.11.97",
+		"@types/multer": "^1.4.12",
+		"@types/node": "^22.9.0",
+		"@types/node-cache": "^4.2.5",
+		"@types/nodemailer": "^6.4.16"
+	}
 }
