--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.8.0",
 		"multer": "^1.4.5-lts.1",
-		"node-cache": "^5.1.2",
 		"nodemailer": "^6.9.16",
 		"ts-node": "^10.9.2",
 		"tsc": "^2.0.4",
@@ -40,6 +39,7 @@
 		"@types/multer": "^1.4.12",
 		"@types/node": "^22.9.0",
 		"@types/node-cache": "^4.2.5",
-		"@types/nodemailer": "^6.4.16"
+		"@types/nodemailer": "^6.4.16",
+		"node-cache": "^5.1.2"
 	}
 }
